metalLB/ingress/prometheus-ingree.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - websecure # Change to "web" if using HTTP
  routes:
    - match: Host(`prometheus.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
